<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mikemedoff.scoutingapp2017gearaffes.DisplayMessageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45dp"
        android:paddingBottom="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/teamName"/>

    <TextView android:id="@+id/Baseline_crossed"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="7dp"
        android:layout_below="@+id/teamName"
        android:hint="@string/baseline" />
    <CheckBox android:id="@+id/Baseline_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/Baseline_crossed"
        android:layout_below="@id/teamName"
        android:paddingTop="30dp"/>
    <TextView android:id="@+id/Hopper_Activated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:paddingRight="7dp"
        android:layout_below="@id/Baseline_crossed"
        android:hint="@string/auto_hopper"/>
    <CheckBox android:id="@+id/Hopper_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/Hopper_Activated"
        android:layout_below="@id/Baseline_Box" />

    <TextView android:id="@+id/Gear_Delivered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:paddingRight="7dp"
        android:layout_below="@id/Hopper_Activated"
        android:hint="@string/auto_gear"/>
    <CheckBox android:id="@+id/Gear_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_toRightOf="@id/Gear_Delivered"
        android:layout_below="@id/Hopper_Box" />

    <TextView android:id="@+id/where_delivered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:paddingRight="7dp"
        android:layout_below="@+id/Gear_Box"
        android:text="Where was gear delivered?"/>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/where_delivered"
        android:id="@+id/Gear_end_point" />


</RelativeLayout>

